# obolochkaTGT

src/: main.py  pyproject.toml
src/core/: api.py
src/services/: database.py
src/ui/: index.html  scripts.js  styles.css
src/ui/components/css/: accounts.css  autoresponder.css  checker.css  logs.css  overview.css  settings.css  spam.css  subscriptions.css
src/ui/components/html/: accounts.html  autoresponder.html  checker.html  logs.html  overview.html  settings.html  spam.html  subscriptions.html
src/ui/components/js/: accounts.js  autoresponder.js  checker.js  logs.js  overview.js  settings.js  spam.js
